# ktorrent-trinity

./: .gitmodules  CMakeL10n.txt  ChangeLog  Makefile.am  README  acinclude.m4  aclocal.m4  configure.in  configure.in.bot  configure.in.in  ktorrent.kdevelop  ktorrent.tdevelop  subdirs
apps/ktcachecheck/: Makefile.am  cachecheck.cpp  cachechecker.cpp  cachechecker.h  multicachechecker.cpp  multicachechecker.h  singlecachechecker.cpp  singlecachechecker.h
apps/ktorrent/: Makefile.am  README  addpeerwidget.cpp  addpeerwidget.h  addpeerwidgetbase.ui  advancedpref.ui  dcopinterface.h  downloadpref.ui  fileselectdlg.cpp  fileselectdlg.h  fileselectdlgbase.ui  filterbar.cpp  filterbar.h  generalpref.ui  hisc-app-ktorrent.svgz  hisc-mime-torrent.svgz  ipfilterwidget.cpp  ipfilterwidget.h  ipfilterwidgetbase.ui  ktorrent.cpp  ktorrent.desktop  ktorrent.h  ktorrent.lsm  ktorrentapp.cpp  ktorrentapp.h  ktorrentcore.cpp  ktorrentcore.h  ktorrentdcop.cpp  ktorrentdcop.h  ktorrentplugin.desktop  ktorrentview.cpp  ktorrentview.h  ktorrentviewitem.cpp  ktorrentviewitem.h  ktorrentviewmenu.cpp  ktorrentviewmenu.h  leaktrace.cpp  main.cpp  pastedialog.cpp  pastedialog.h  (+22 more)
apps/kttorinfo/: Makefile.am  main.cpp
apps/ktupnptest/: Makefile.am  main.cpp  mainwidget.ui  upnptestapp.cpp  upnptestapp.h
doc/en/: Makefile.am  commands.docbook  configure.docbook  credits.docbook  faq.docbook  index.docbook  introduction.docbook  using.docbook
doc/man/: Makefile.am  ktorrent.1
estimation-scripts/: README  enable-logging.diff
libktorrent/: Makefile.am  expandablewidget.cpp  expandablewidget.h  functions.cpp  functions.h  ktorrent.kcfg  labelview.cpp  labelview.h  labelviewitembase.ui  pluginmanager.cpp  pluginmanager.h  pluginmanagerprefpage.cpp  pluginmanagerprefpage.h  pluginmanagerwidget.ui  settings.kcfgc
libktorrent/datachecker/: datachecker.h  datacheckerthread.cpp  datacheckerthread.h  multidatachecker.cpp  multidatachecker.h  singledatachecker.cpp  singledatachecker.h
libktorrent/interfaces/: chunkdownloadinterface.h  coreinterface.h  exitoperation.cpp  exitoperation.h  filetreediritem.cpp  filetreediritem.h  filetreeitem.cpp  filetreeitem.h  functions.cpp  functions.h  guiinterface.cpp  guiinterface.h  ipblockinginterface.h  logmonitorinterface.h  peerinterface.h  peersource.cpp  peersource.h  plugin.cpp  plugin.h  prefpageinterface.cpp  prefpageinterface.h  torrentfileinterface.cpp  torrentfileinterface.h  torrentinterface.h
libktorrent/kademlia/: announcetask.cpp  announcetask.h  database.cpp  database.h  dht.cpp  dht.h  dhtbase.h  dhttrackerbackend.cpp  dhttrackerbackend.h  kbucket.cpp  kbucket.h  kclosestnodessearch.cpp  kclosestnodessearch.h  key.cpp  key.h  node.cpp  node.h  nodelookup.cpp  pack.cpp  pack.h  rpccall.cpp  rpccall.h  rpcmsg.cpp  rpcmsg.h  rpcserver.cpp  rpcserver.h  task.cpp  task.h  taskmanager.cpp  taskmanager.h
libktorrent/migrate/: cachemigrate.cpp  cachemigrate.h  ccmigrate.cpp  ccmigrate.h  migrate.cpp  migrate.h
libktorrent/mse/: bigint.cpp  bigint.h  encryptedauthenticate.cpp  encryptedauthenticate.h  encryptedserverauthenticate.h  functions.cpp  functions.h  streamsocket.cpp  streamsocket.h
libktorrent/net/: address.cpp  address.h  bufferedsocket.h  circularbuffer.h  downloadthread.cpp  networkthread.cpp  networkthread.h  portlist.cpp  portlist.h  socket.cpp  socketmonitor.cpp  socketmonitor.h  speed.cpp  speed.h  uploadthread.cpp  uploadthread.h
libktorrent/torrent/: Makefile.am  advancedchokealgorithm.cpp  announcelist.cpp  announcelist.h  authenticate.cpp  authenticate.h  authenticatebase.cpp  authenticatebase.h  bdecoder.cpp  bdecoder.h  bencoder.cpp  bencoder.h  bnode.cpp  bnode.h  cache.cpp  cache.h  cachefile.cpp  cachefile.h  cap.cpp  cap.h  choker.cpp  choker.h  chunk.cpp  chunk.h  chunkdownload.cpp  chunkdownload.h  chunkmanager.cpp  chunkmanager.h  chunkselector.cpp  chuntdeselector.cpp  dndfile.cpp  dndfile.h  (+65 more)
plugins/infowidget/: GeoIP.c  GeoIP.h  Makefile.am  availabilitychunkbar.cpp  availabilitychunkbar.h  chunkbar.cpp  chunkbar.h  chunkdownloadview.cpp  chunkdownloadview.h  chunkdownloadviewbase.ui  downloadedchunkbar.cpp  downloadedchunkbar.h  fileview.cpp  fileview.h  flagdb.cpp  flagdb.h  floatspinbox.cpp  floatspinbox.h  infowidgetplugin.cpp  infowidgetplugin.h  infowidgetpluginsettings.kcfgc  infowidgetprefpage.cpp  infowidgetprefpage.h  iwfiletreediritem.cpp  iwfiletreediritem.h  iwfiletreeitem.cpp  iwfiletreeitem.h  iwpref.ui  ktinfowidgetplugin.desktop  localefloatvalidator.cpp  localefloatvalidator.h  peerview.cpp  peerview.h  statustab.cpp  statustab.h  statustabbase.ui  trackerview.cpp  trackerview.h  trackerviewbase.ui
translations/: ktorrent.pot
utests/: Makefile.am  biginttest.cpp  dhtmsgparsetest.cpp  dhtmsgparsetest.h  rc4test.cpp  testrunner.cpp  testrunner.h  unittest.cpp  unittest.h  upnpparsedescriptiontest.cpp  upnpparseresponsetest.cpp
(+295 files in other folders)
